--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "types": "./types/index.d.ts",
   "scripts": {
     "test": "npx jest",
-    "build": "tsc && webpack",
-    "bench": "webpack && node ./bench/bench.js"
+    "build": "npx tsc && npx webpack",
+    "bench": "npx webpack && node ./bench/bench.js"
   },
   "files": [
     "./dist/djot.js",
